public class Amplifier {
    public void off() {
    }

    public void on() {
    }

    public void setDvd(DvdPlayer dvd) {
    }

    public void setSurroundSound() {
    }

    public void setVolume(int i) {
    }
}
