public class CdPlayer {
}
