public class DvdPlayer {
    public void on() {
    }
    
    public void off() {
    }

    public void ejec() {
    }

    public void stop() {
    }

    public void play(String movie) {
    }
}
