public class PopcornPopper {
    public void on() {}

    public void off() {}

    public void pop() {}
}
