public class Projector {
    public void off() {
    }

    public void on() {
    }

    public void wideScreenMode() {

    }
}
