public class Screen {
    public void up() {
    }

    public void down() {
    }
}
