public class TheaterLights {
    public void on() {
    }

    public void dim(int i) {
    }
}
